<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundLightGrey"
    tools:context=".FirstFragment">

    <ImageView
        android:id="@+id/auto_imageView"
        android:layout_width="350dp"
        android:layout_height="161dp"
        android:contentDescription="@string/auto_imageView"
        android:src="@drawable/auto_sprite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.576" />

    <ImageView
        android:id="@+id/ruota_anteriore"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_marginStart="24dp"
        android:contentDescription="@string/ruotaAnteriore_imageView"
        android:src="@drawable/ruota"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/auto_imageView"
        app:layout_constraintTop_toTopOf="@+id/auto_imageView"
        app:layout_constraintVertical_bias="0.481" />

    <androidx.cardview.widget.CardView
        android:id="@+id/frenataRigenerativa_cardView"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:background="@android:color/holo_green_dark"
        android:visibility="invisible"
        app:cardBackgroundColor="@android:color/holo_green_dark"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.828"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.527">

        <TextView
            android:id="@+id/frenataRigenerativa_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/frenataRigenerativa_string"
            android:textColor="@color/backgroundDarkGrey"
            android:textSize="18sp" />
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/ruota_posteriore"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_marginStart="92dp"
        android:contentDescription="@string/ruotaPosteriore_imageView"
        android:src="@drawable/ruota"
        app:layout_constraintBottom_toBottomOf="@+id/ruota_anteriore"
        app:layout_constraintEnd_toEndOf="@+id/auto_imageView"
        app:layout_constraintHorizontal_bias="0.264"
        app:layout_constraintStart_toEndOf="@+id/ruota_anteriore"
        app:layout_constraintTop_toTopOf="@+id/auto_imageView"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/battery_lvl4_imageView"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:src="@drawable/battery4"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/auto_imageView"
        app:layout_constraintEnd_toEndOf="@+id/auto_imageView"
        app:layout_constraintHorizontal_bias="0.427"
        app:layout_constraintStart_toStartOf="@+id/auto_imageView"
        app:layout_constraintTop_toTopOf="@+id/auto_imageView"
        app:layout_constraintVertical_bias="0.618" />

    <ImageView
        android:id="@+id/solarArrow_imageView"
        android:layout_width="24dp"
        android:layout_height="62dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/sun4"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/auto_imageView"
        app:layout_constraintEnd_toEndOf="@+id/auto_imageView"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/auto_imageView"
        app:layout_constraintTop_toBottomOf="@+id/sole_imageView"
        app:layout_constraintVertical_bias="0.023" />

    <androidx.cardview.widget.CardView
        android:id="@+id/nm_cardView"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:background="@android:color/holo_green_light"
        android:visibility="invisible"
        app:cardBackgroundColor="@android:color/holo_green_light"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.708"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.549">

        <TextView
            android:id="@+id/nm_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/xx_nm_string"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/braking_cardView"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:visibility="invisible"
        app:cardBackgroundColor="@android:color/holo_green_light"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/auto_imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.768"
        app:layout_constraintStart_toStartOf="@+id/auto_imageView"
        app:layout_constraintTop_toTopOf="@+id/auto_imageView"
        app:layout_constraintVertical_bias="0.413">

        <TextView
            android:id="@+id/braking_textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/xx_w_textVIew"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/wh_oggi_cardView"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:visibility="invisible"
        app:cardBackgroundColor="@color/colorSecondary"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.713"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.461">

        <TextView
            android:id="@+id/wh_oggi_textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/wh_oggi"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/braking_imageView"
        android:layout_width="56dp"
        android:layout_height="30dp"
        android:src="@drawable/traction"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/auto_imageView"
        app:layout_constraintEnd_toEndOf="@+id/auto_imageView"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@+id/battery_lvl4_imageView"
        app:layout_constraintTop_toTopOf="@+id/auto_imageView"
        app:layout_constraintVertical_bias="0.618" />

    <androidx.cardview.widget.CardView
        android:id="@+id/consumoEnergia_cardView"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/holo_green_light"
        android:visibility="invisible"
        app:cardBackgroundColor="@android:color/holo_green_light"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_nave_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.959">

        <TextView
            android:id="@+id/consumoEnergia_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/consumo_energia_string"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/xx_down_cardView"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginBottom="64dp"
        android:visibility="invisible"
        app:cardBackgroundColor="@android:color/holo_green_light"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/auto_imageView"
        app:layout_constraintStart_toStartOf="@+id/auto_imageView"
        app:layout_constraintTop_toTopOf="@+id/auto_imageView"
        app:layout_constraintVertical_bias="0.865">

        <TextView
            android:id="@+id/xx_down_textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/xx_percentual"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/solar_W_cardView"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:elevation="8dp"
        android:visibility="invisible"
        app:cardBackgroundColor="@color/colorSecondary"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.61"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32">

        <TextView
            android:id="@+id/solar_w_textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/xxx_w_textView"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/conta_km_cardView"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:background="@color/colorSecondary"
        android:backgroundTint="@color/colorSecondary"
        android:elevation="8dp"
        android:visibility="invisible"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65999997">

        <TextView
            android:id="@+id/speed_textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/km_h"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/lifeSave_imageView"
        android:layout_width="133dp"
        android:layout_height="83dp"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/lifesave_logo_imageView"
        android:src="@drawable/logo_lifesave"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/sole_imageView"
        android:layout_width="90dp"
        android:layout_height="73dp"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/sole_imageView"
        android:src="@drawable/sun"
        app:layout_constraintBottom_toTopOf="@+id/auto_imageView"
        app:layout_constraintEnd_toStartOf="@+id/life_imageView"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toEndOf="@+id/lifeSave_imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.181" />

    <ImageView
        android:id="@+id/life_imageView"
        android:layout_width="149dp"
        android:layout_height="87dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/life_logo_imageView"
        android:src="@drawable/lifelogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nave_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navigation_menu"
        android:background="?android:attr/windowBackground"/>

</androidx.constraintlayout.widget.ConstraintLayout>