<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/backgroundDarkGrey"
    android:background="@color/backgroundDarkGrey"
    tools:context=".FirstFragment">

    <ImageView
        android:id="@+id/auto_imageView"
        android:layout_width="350dp"
        android:layout_height="161dp"
        android:contentDescription="@string/auto_imageView"
        android:src="@drawable/auto_sprite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.668" />

    <androidx.cardview.widget.CardView
        android:id="@+id/xx_down_cardView"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginBottom="64dp"
        app:cardBackgroundColor="@android:color/holo_green_light"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/auto_imageView"
        app:layout_constraintStart_toStartOf="@+id/auto_imageView"
        app:layout_constraintTop_toTopOf="@+id/auto_imageView"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/xx_down_textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/xx_percentual"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp" />
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/ruota_anteriore"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_marginStart="24dp"
        android:contentDescription="@string/ruotaAnteriore_imageView"
        android:src="@drawable/ruota"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/auto_imageView"
        app:layout_constraintTop_toTopOf="@+id/auto_imageView"
        app:layout_constraintVertical_bias="0.493" />

    <androidx.cardview.widget.CardView
        android:id="@+id/solar_W_cardView"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:elevation="8dp"
        android:visibility="visible"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.62"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/life_cardView"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/solar_w_textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/xxx_w_textView"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp" />

    </androidx.cardview.widget.CardView>

    <com.cardiomood.android.controls.gauge.SpeedometerGauge
        android:id="@+id/speedometer_view"
        android:layout_width="510dp"
        android:layout_height="263dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/auto_imageView"
        app:layout_constraintEnd_toStartOf="@+id/auto_imageView"
        app:layout_constraintHorizontal_bias="0.785"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/auto_imageView"
        app:layout_constraintVertical_bias="0.38" />

    <androidx.cardview.widget.CardView
        android:id="@+id/conta_km_cardView"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorSecondary"
        android:backgroundTint="@color/colorSecondary"
        android:elevation="8dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/speedometer_view"
        app:layout_constraintStart_toStartOf="@+id/speedometer_view"
        app:layout_constraintTop_toBottomOf="@+id/speedometer_view"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/speed_textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/km_h"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/battery_lvl4_imageView"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:src="@drawable/battery4"
        app:layout_constraintBottom_toBottomOf="@+id/auto_imageView"
        app:layout_constraintEnd_toEndOf="@+id/auto_imageView"
        app:layout_constraintHorizontal_bias="0.427"
        app:layout_constraintStart_toStartOf="@+id/auto_imageView"
        app:layout_constraintTop_toTopOf="@+id/auto_imageView"
        app:layout_constraintVertical_bias="0.687" />

    <ImageView
        android:id="@+id/ruota_posteriore"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_marginStart="92dp"
        android:contentDescription="@string/ruotaPosteriore_imageView"
        android:src="@drawable/ruota"
        app:layout_constraintBottom_toBottomOf="@+id/auto_imageView"
        app:layout_constraintEnd_toEndOf="@+id/auto_imageView"
        app:layout_constraintHorizontal_bias="0.323"
        app:layout_constraintStart_toEndOf="@+id/ruota_anteriore"
        app:layout_constraintTop_toTopOf="@+id/auto_imageView"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/braking_imageView"
        android:layout_width="56dp"
        android:layout_height="30dp"
        android:src="@drawable/traction"
        app:layout_constraintBottom_toBottomOf="@+id/auto_imageView"
        app:layout_constraintEnd_toEndOf="@+id/auto_imageView"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toEndOf="@+id/battery_lvl4_imageView"
        app:layout_constraintTop_toTopOf="@+id/auto_imageView"
        app:layout_constraintVertical_bias="0.687" />

    <androidx.cardview.widget.CardView
        android:id="@+id/lifesave_cardView"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/sole_cardView"
        app:layout_constraintEnd_toStartOf="@+id/sole_cardView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/lifeSave_imageView"
            android:layout_width="133dp"
            android:layout_height="83dp"
            android:layout_gravity="center"
            android:contentDescription="@string/lifesave_logo_imageView"
            android:src="@drawable/logo_lifesave" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/life_cardView"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/sole_cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/sole_cardView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ImageView
            android:id="@+id/life_imageView"
            android:layout_width="183dp"
            android:layout_height="81dp"
            android:layout_gravity="center"
            android:contentDescription="@string/life_logo_imageView"
            android:src="@drawable/lifelogo" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/sole_cardView"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toTopOf="@+id/auto_imageView"
        app:layout_constraintEnd_toEndOf="@+id/auto_imageView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/auto_imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/sole_imageView"
            android:layout_width="90dp"
            android:layout_height="73dp"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/sole_imageView"
            android:src="@drawable/sun" />

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/solarArrow_imageView"
        android:layout_width="24dp"
        android:layout_height="62dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/sun4"
        app:layout_constraintBottom_toBottomOf="@+id/auto_imageView"
        app:layout_constraintEnd_toEndOf="@+id/auto_imageView"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/auto_imageView"
        app:layout_constraintTop_toBottomOf="@+id/sole_cardView"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.cardview.widget.CardView
        android:id="@+id/braking_cardView"
        android:layout_width="100dp"
        android:layout_height="40dp"
        app:cardBackgroundColor="@android:color/holo_green_light"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/auto_imageView"
        app:layout_constraintEnd_toEndOf="@+id/auto_imageView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/auto_imageView"
        app:layout_constraintTop_toTopOf="@+id/auto_imageView"
        app:layout_constraintVertical_bias="0.413">

        <TextView
            android:id="@+id/braking_textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/xx_w_textVIew"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>